# Ibiza

./: .gitignore  CLAUDE.md  README.md  main.py  merge_metadata_example.py  pyproject.toml
config/: roll_parameters.ods
dashboard/: enhanced-app.py  test_september_data.py
dashboard/static/js/: enhanced-dashboard.js  futures-charts.js
dashboard/templates/: _base.html  futures_charts.html
docs/: TODO.md  futures_objects.puml  todo  utility_objects.puml
src/config/: config_objects.py  logging_config.yaml
src/core/: date_utilities.py  logger.py  misc_utils.py  utils.py
src/objects/: contract_dates.py  contracts.py  dict_future_contract_prices.py  instruments.py
