[project]
name = "ibiza"
version = "0.1.0"
description = ""
authors = [
    {name = "supersonic-electronic",email = "jinkazama232@protonmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.3.1,<3.0.0)",
    "pyarrow (>=21.0.0,<22.0.0)",
    "pandas-market-calendars (>=5.1.1,<6.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "odfpy (>=1.4.1,<2.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
